Fixed post overflow on mobile phones

--- a/_sass/components/_picture.scss
+++ b/_sass/components/_picture.scss
@@ -5,8 +5,8 @@
     background-color: var(--color-base-lightest);
     border-radius: var(--border-radius-xxs);
     margin-bottom: var(--space-l);
-    margin-left: initial;
-    margin-right: initial;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: initial;
     padding: var(--space-l);
 
